[gd_scene load_steps=8 format=2]

[ext_resource path="res://SpikeTrap.gd" type="Script" id=1]
[ext_resource path="res://Sprites/FramesUpdated/Frames Sword Update/Traps/Spikes/FrontSpikes/Tiles_0000s_0002s_0000s_0000_Front-Spikes.png" type="Texture" id=2]
[ext_resource path="res://Sprites/FramesUpdated/Frames Sword Update/Traps/Spikes/FrontSpikes/Tiles_0000s_0002s_0001s_0000_Front-Spikes.png" type="Texture" id=3]
[ext_resource path="res://Sprites/FramesUpdated/Frames Sword Update/Traps/Spikes/FrontSpikes/Tiles_0000s_0002s_0002s_0000_Front-Spikes.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null ],
"loop": true,
"name": "hidden",
"speed": 5.0
}, {
"frames": [ null, ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "out",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), null ],
"loop": false,
"name": "retract",
"speed": 4.97
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.2592, 14.3302 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.9326, 50.7571 )

[node name="Spike" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "hidden"
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
